Instalando validação de documentos

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -129,5 +129,6 @@
   "click here to request another": "clique aqui para solicitar outro",
   "of": "de",
   "results": "resultados",
-  "to": "até"
+  "to": "até",
+  "Operators": "Operadores"
 }
