Definindo cabeçalho de páginas de redefinição de senha

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -135,5 +135,6 @@
   "Create Operator": "Cadastrar Operador",
   "Edit Operator": "Editar Operador",
   "The operator will receive a notification in the informed e-mail to register the access password to the system": "O operador irá receber uma notificação no e-mail informado para cadastrar a senha de acesso ao sistema",
-  "Fill in the fields you would like to edit and click save": "Preencha os campos que gostaria de editar e clique em salvar"
+  "Fill in the fields you would like to edit and click save": "Preencha os campos que gostaria de editar e clique em salvar",
+  "Enter the new password to access the dashboard": "Informe a nova senha para acessar o painel"
 }
