--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -136,5 +136,8 @@
   "Edit Operator": "Editar Operador",
   "The operator will receive a notification in the informed e-mail to register the access password to the system": "O operador irá receber uma notificação no e-mail informado para cadastrar a senha de acesso ao sistema",
   "Fill in the fields you would like to edit and click save": "Preencha os campos que gostaria de editar e clique em salvar",
-  "Enter the new password to access the dashboard": "Informe a nova senha para acessar o painel"
+  "Enter the new password to access the dashboard": "Informe a nova senha para acessar o painel",
+  "Services": "Serviços",
+  "Create Service": "Cadastrar Serviço",
+  "Edit Service": "Editar Serviço"
 }
