Cadastro e listagem de indicações

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -16,6 +16,7 @@
   "Before proceeding, please check your email for a verification link.": "Antes de prosseguir, por favor, veja se recebeu o link de verificação em seu e-mail",
   "Browser Sessions": "Sessões do navegador",
   "Cancel": "Cancelar",
+  "Edit": "Editar",
   "Click here to re-send the verification email.": "Clique aqui para reenviar o e-mail de verificação.",
   "Close": "Fechar",
   "Code": "Código",
@@ -61,6 +62,7 @@
   "Manage Account": "Gerenciar Conta",
   "Manage and log out your active sessions on other browsers and devices.": "Gerencie e saia de suas sessões ativas em outros navegadores e dispositivos.",
   "Name": "Nome",
+  "Actions": "Ações",
   "Phone": "Telefone",
   "Nevermind": "Deixa pra lá",
   "New Password": "Nova Senha",
@@ -139,5 +141,11 @@
   "Enter the new password to access the dashboard": "Informe a nova senha para acessar o painel",
   "Services": "Serviços",
   "Create Service": "Cadastrar Serviço",
-  "Edit Service": "Editar Serviço"
+  "Edit Service": "Editar Serviço",
+  "Indications": "Indicações",
+  "Create New": "Criar Novo",
+  "Doc. Number": "Documento",
+  "Corporate Name": "Razão social",
+  "Create Indication": "Cadastrar Indicação",
+  "Doc. Type": "Tipo de documento"
 }
