Edição e exclusão de indicações

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -147,5 +147,6 @@
   "Doc. Number": "Documento",
   "Corporate Name": "Razão social",
   "Create Indication": "Cadastrar Indicação",
-  "Doc. Type": "Tipo de documento"
+  "Doc. Type": "Tipo de documento",
+  "Edit Indication": "Editar Indicação"
 }
