Ajustando tradução na listagem de operadores e serviços

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -148,5 +148,7 @@
   "Corporate Name": "Razão social",
   "Create Indication": "Cadastrar Indicação",
   "Doc. Type": "Tipo de documento",
-  "Edit Indication": "Editar Indicação"
+  "Edit Indication": "Editar Indicação",
+  "Active": "Ativo",
+  "Inactive": "Inativo"  
 }
