Listagem de orçamentos

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -167,5 +167,7 @@
   "Percent": "Porcentagem",
   "Indication": "Indicação",
   "Budget": "Orçamento",
-  "Edit Budget": "Editar Orçamento"
+  "Edit Budget": "Editar Orçamento",
+  "Show": "Visualizar",
+  "Creation Date": "Data de Criação"
 }
