Dashboard do usuário

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -177,5 +177,8 @@
   "Do you want to register as a corporate?": "Deseja se cadastrar como pessoa jurídica?",
   "Do you want to register as a person?": "Deseja se cadastrar como pessoa física?",
   "Create Account": "Criar conta",
-  "Create Corporate Account": "Criar conta para empresa"
+  "Create Corporate Account": "Criar conta para empresa",
+  "Installment": "Parcela",
+  "Date": "Data",
+  "Commissions": "Comissões"
 }
