Criando página de visualização dos dados da indicação

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -180,5 +180,6 @@
   "Create Corporate Account": "Criar conta para empresa",
   "Installment": "Parcela",
   "Date": "Data",
-  "Commissions": "Comissões"
+  "Commissions": "Comissões",
+  "Show Indication": "Visualizar Indicação"
 }
