--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -154,7 +154,7 @@
     "Inactive": "Inativo",
     "Service": "Serviço Procurado",
     "Create Budget": "Criar Orçamento",
-    "Finishing Month": "Mês de Finalização",
+    "Finishing Month": "Mês de Finalização da Proposta",
     "Payment Type": "Tipo de Pagamento",
     "Budget Value": "Valor da Proposta",
     "Proposal Number": "Número da Proposta",
