Solicitando número do contrato ao fechar orçamento

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -158,6 +158,7 @@
     "Payment Type": "Tipo de Pagamento",
     "Budget Value": "Valor da Proposta",
     "Proposal Number": "Número da Proposta",
+    "Contract Number": "Número do Contrato",
     "Commission": "Comissão",
     "Document": "Documento",
     "First Payment Date": "Data do Primeiro Pagamento",
