Adicionando razão social e nome do parceiro na listagem de orçamentos

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -159,6 +159,7 @@
     "Budget Value": "Valor da Proposta",
     "Proposal Number": "Número da Proposta",
     "Contract Number": "Número do Contrato",
+    "Partner": "Parceiro",
     "Commission": "Comissão",
     "Document": "Documento",
     "First Payment Date": "Data do Primeiro Pagamento",
