Implementando filtros de data

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -186,5 +186,8 @@
     "Date": "Data",
     "Commissions": "Comissões",
     "Show Indication": "Visualizar Indicação",
-    "Last Installment Date": "Data da última parcela"
+    "Last Installment Date": "Data da última parcela",
+    "Year": "Ano",
+    "Month": "Mês",
+    "Day": "Dia"
 }
