Adicionando coluna de ações e ajustando coluna de status

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -187,6 +187,7 @@
     "Commissions": "Comissões",
     "Show Indication": "Visualizar Indicação",
     "Last Installment Date": "Data da última parcela",
+    "Expiration Date": "Data de vencimento",
     "Year": "Ano",
     "Month": "Mês",
     "Day": "Dia"
