Data de expiração do contrato

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -190,5 +190,6 @@
     "Expiration Date": "Data de vencimento",
     "Year": "Ano",
     "Month": "Mês",
-    "Day": "Dia"
+    "Day": "Dia",
+    "Contract End Date": "Data de Fim do Contrato"
 }
