Listagem de parceiros do administrador

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -160,6 +160,7 @@
     "Proposal Number": "Número da Proposta",
     "Contract Number": "Número do Contrato",
     "Partner": "Parceiro",
+    "Partners": "Parceiros",
     "Commission": "Comissão",
     "Document": "Documento",
     "First Payment Date": "Data do Primeiro Pagamento",
