Ajustando label de campo

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -195,5 +195,6 @@
     "Year": "Ano",
     "Month": "Mês",
     "Day": "Dia",
-    "Contract End Date": "Data de Fim do Contrato"
+    "Contract End Date": "Data de Fim do Contrato",
+    "Name / Corporate Name": "Nome / Razão Social"
 }
