Criando campo de observação no cadastro da indicação

--- a/lang/pt_BR.json
+++ b/lang/pt_BR.json
@@ -196,5 +196,6 @@
     "Month": "Mês",
     "Day": "Dia",
     "Contract End Date": "Data de Fim do Contrato",
-    "Name / Corporate Name": "Nome / Razão Social"
+    "Name / Corporate Name": "Nome / Razão Social",
+    "Note": "Observações"
 }
